--- a/notebooks/github_hw1.ipynb
+++ b/notebooks/github_hw1.ipynb
@@ -34,11 +34,11 @@
         "# Домашнее задание\n",
         "Домашнее задание выполнять в этой тетрадке. \n",
         "\n",
-        "- [ ] Сделать fork репозитория cvr_cource (https://github.com/StarkitRobots/cvr_course) - 1 балл\n",
-        "- [ ] Создать ветку update_readme - 1 балл\n",
-        "- [ ] Добавить одну строчку в README.md \n",
-        "- [ ] Запушить (git push) изменения в ветку update_readme - 3 балла\n",
-        "- [ ] Слить (merge) ветку update_readme в ветку develop - 1 балл\n",
+        "- [x] Сделать fork репозитория cvr_cource (https://github.com/StarkitRobots/cvr_course) - 1 балл\n",
+        "- [x] Создать ветку update_readme - 1 балл\n",
+        "- [x] Добавить одну строчку в README.md \n",
+        "- [x] Запушить (git push) изменения в ветку update_readme - 3 балла\n",
+        "- [x] Слить (merge) ветку update_readme в ветку develop - 1 балл\n",
         "- [ ] Сохранить эту тетрадку с выполненной домашкой себе в репозиторий в ветку develop - 3 балла\n",
         "- [ ] Слить (merge) ветку develop в ветку main - 1 балл"
       ]
@@ -61,7 +61,139 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sy4w3xLn4vAw"
+        "id": "quyaNoZR-AGl",
+        "outputId": "7de92458-475c-43c9-8ec2-4d24b764cc9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "source": [
+        "!git checkout develop"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Branch 'develop' set up to track remote branch 'develop' from 'origin'.\n",
+            "Switched to a new branch 'develop'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b0l1PQgG-cfg"
+      },
+      "source": [
+        "!git branch update_readme"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PAoSXXPj-lWW",
+        "outputId": "e8fb831b-2e67-4fcd-9b48-7536528e76d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "!git checkout update_readme"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Switched to branch 'update_readme'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vc0uEZyt-3B-"
+      },
+      "source": [
+        "!echo \"Hello, Git!\" >> README.md"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DvnYAZNr_9eO",
+        "outputId": "992f0415-6300-44d9-ac47-590747e5c5a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "!git remote add origin-psk https://Bogdanov499:kenkokk66@github.com/Bogdanov499/cvr_course.git\n",
+        "!git config --global user.email \"bogdanov.dg@phystech.edu\"\n",
+        "!git config --global user.name \"Danil Bogdanov\""
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: remote origin-psk already exists.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tUcM6h6h_Kig",
+        "outputId": "9e51440f-9e7f-4ebd-d4a5-d5a312dc0be6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        }
+      },
+      "source": [
+        "!git add README.md\n",
+        "!git commit -m \"Поменял одну строчку в README.md\"\n",
+        "!git push origin-psk update_readme"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[update_readme bbe4048] Поменял одну строчку в README.md\n",
+            " 1 file changed, 1 insertion(+)\n",
+            "Counting objects: 3, done.\n",
+            "Delta compression using up to 2 threads.\n",
+            "Compressing objects: 100% (3/3), done.\n",
+            "Writing objects: 100% (3/3), 358 bytes | 358.00 KiB/s, done.\n",
+            "Total 3 (delta 2), reused 0 (delta 0)\n",
+            "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+            "To https://github.com/Bogdanov499/cvr_course.git\n",
+            "   53c0cf1..bbe4048  update_readme -> update_readme\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vi3yHpDDBSIW"
       },
       "source": [
         ""
